--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         
         .logo img{
             margin-top:25px;
-            width: 207px;
+            width: 196px;
             height: 41px;
         }
         
@@ -707,7 +707,7 @@
              <div class="cols">
                  <div class="foot col1">
                        <!-- a.logo>img[src=img/logo.png] -->
-            <a href="#" class="logo"><img src="img/logo.png" alt=""></a>
+            <a href="#" class="logo"><img src="img/logo.PNG" alt=""></a>
             <!-- a[href=#]*4 -->
                 <div class="icons">
             <a href="#"><i class="fab fa-facebook"></i></a>
