--- a/index.html
+++ b/index.html
@@ -706,8 +706,8 @@
             <!-- .cols>.foot.col$*4 -->
              <div class="cols">
                  <div class="foot col1">
-                       <!-- a.logo>img[src=img/logo1.png] -->
-            <a href="#" class="logo"><img src="img/logo1.PNG" alt=""></a>
+                       <!-- a.logo>img[src=img/logo2.PNG] -->
+            <a href="#" class="logo"><img src="img/logo2.PNG" alt=""></a>
             <!-- a[href=#]*4 -->
                 <div class="icons">
             <a href="#"><i class="fab fa-facebook"></i></a>
